expoevent section added

--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -365,56 +365,61 @@
         </div>
     </div>
 
-    <!-- <div class="gallery py-5">
+    <div class="gallery py-5">
         <div class="container">
             <div class="heading">
-                <h2>Ice Cream Shop <i class="fa-solid fa-images"></i></h2>
-                <p>ICE CREAM MENU</p>
+                <h2>Our Latest Event <i class="fa-solid fa-images"></i></h2>
+                <p>GLIMPSE</p>
             </div>
             <div class="row">
                 <div class="col-sm-8">
                     <div class="row pb-1">
                         <div class="col-sm-4 pl-0">
                             <div class="gallery-main">
-                                <img src="./assets/images/gallery/one.jpg" class="img-fluid">
+                                <img src="./assets/images/expo-images/Expo Image_300x300_1.jpg" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-sm-4 pl-0">
                             <div class="gallery-main">
-                                <img src="./assets/images/gallery/two.jpg" class="img-fluid">
+                                <img src="./assets/images/expo-images/Expo Image_300x300_2.jpg" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-sm-4 pl-0">
                             <div class="gallery-main">
-                                <img src="./assets/images/gallery/three.jpg" class="img-fluid">
+                                <img src="./assets/images/expo-images/Expo Image_300x300_3.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4 pl-0">
                             <div class="gallery-main">
-                                <img src="./assets/images/gallery/four.jpg" class="img-fluid">
+                                <img src="./assets/images/expo-images/Expo Image_300x300_4.jpg" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-sm-4 pl-0">
                             <div class="gallery-main">
-                                <img src="./assets/images/gallery/five.jpg" class="img-fluid">
+                                <img src="./assets/images/expo-images/Expo Image_300x300_5.jpg" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-sm-4 pl-0">
                             <div class="gallery-main">
-                                <img src="./assets/images/gallery/six.jpg" class="img-fluid">
+                                <img src="./assets/images/expo-images/Expo Image_300x300_6.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <img src="/assets/images/1.jpg" class="img-fluid">
+                <div class="col-sm-4 gallery-main2">
+                    <img src="./assets/images/expo-images/Expo Image_400x550.jpg" class="img-fluid">
+                    <div class="video-btn">
+                        <i class="fa-regular fa-circle-play"></i>
+                    </div>
                 </div>
             </div>
 
         </div>
-    </div> -->
+    </div>
+
+    <molla-modal2-basic></molla-modal2-basic>
 
     <div class="insta-post mt-3">
         <div class="heading text-center">
