--- a/src/app/pages/home/index/modal-basic/modal-basic.component.html
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.html
@@ -10,6 +10,6 @@
 				<!-- <h1>{{newval}}</h1> -->
 			</div>
 	</ng-template>
-	<!-- <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button> -->
+	<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
 	<!-- <hr /> -->
 </div>
