--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1337,4 +1337,27 @@ a{
             object-position: center !important;
         }
     }
+
+    .gallery-main2 {
+        img{
+        }
+
+        .video-btn {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            color: #fff;
+            font-size: 60px;
+            cursor: pointer;
+            background-color: #000000b0;
+            padding: 10px;
+            width: 85px;
+            height: 85px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+        }
+    }
 }
