event section with video added

--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -373,35 +373,35 @@
             </div>
             <div class="row">
                 <div class="col-sm-8">
-                    <div class="row pb-1">
-                        <div class="col-sm-4 pl-0">
+                    <div class="row">
+                        <div class="col-sm-4 mb-1">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_1.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 pl-0">
+                        <div class="col-sm-4 mb-1">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_2.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 pl-0">
+                        <div class="col-sm-4 mb-1">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_3.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4 pl-0">
+                        <div class="col-sm-4 mb-1">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_4.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 pl-0">
+                        <div class="col-sm-4 mb-1">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_5.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 pl-0">
+                        <div class="col-sm-4 mb-1">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_6.jpg" class="img-fluid">
                             </div>
@@ -411,7 +411,7 @@
                 <div class="col-sm-4 gallery-main2">
                     <img src="./assets/images/expo-images/Expo Image_400x550.jpg" class="img-fluid">
                     <div class="video-btn">
-                        <i class="fa-regular fa-circle-play"></i>
+                        <molla-modal-basic2></molla-modal-basic2>
                     </div>
                 </div>
             </div>
