--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1327,7 +1327,7 @@ a{
     }
 
     .gallery-main {
-        max-height: 250px;
+        // max-height: 250px;
         overflow: hidden;
 
         img {
@@ -1352,12 +1352,18 @@ a{
             cursor: pointer;
             background-color: #000000b0;
             padding: 10px;
-            width: 85px;
-            height: 85px;
+            width: 70px;
+            height: 70px;
             display: flex;
             justify-content: center;
             align-items: center;
             border-radius: 50%;
+
+            molla-modal-basic2 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
     }
 }
