added cod with 99 charge in check-out

--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1335,11 +1335,13 @@ a{
             width: 100%;
             object-fit: cover !important;
             object-position: center !important;
+            min-height: 262px;
         }
     }
 
     .gallery-main2 {
-        img{
+        img{      
+            min-height: 540px;
         }
 
         .video-btn {
