--- a/src/app/pages/shop/productcheckout/productcheckout.component.html
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.html
@@ -267,9 +267,9 @@
                                           Cash on Delivery
                                         </label>
                                       </div>
-                                      <hr style="margin: 0; margin-bottom: 20px; border-color: lightgray;" />
-                                      <h6>Fast Delivery With In 48 Hours</h6>
-                                      <div class="form-check second_box">
+                                      <hr style="margin: 0; margin-bottom: 20px; border-color: lightgray; display: none;" />
+                                      <h6 style="display: none;">Fast Delivery With In 48 Hours</h6>
+                                      <div class="form-check second_box" style="display: none;">
                                         <input class="form-check-input" type="radio" value="fastdelivery" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault3">
                                         <label class="form-check-label" for="flexRadioDefault2">
                                           Fast Delivery
