--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -374,34 +374,34 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="row">
-                        <div class="col-sm-4 mb-1">
+                        <div class="col-sm-4 p-2">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_1.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 mb-1">
+                        <div class="col-sm-4 p-2">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_2.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 mb-1">
+                        <div class="col-sm-4 p-2">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_3.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4 mb-1">
+                        <div class="col-sm-4 p-2">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_4.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 mb-1">
+                        <div class="col-sm-4 p-2">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_5.jpg" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-sm-4 mb-1">
+                        <div class="col-sm-4 p-2">
                             <div class="gallery-main">
                                 <img src="./assets/images/expo-images/Expo Image_300x300_6.jpg" class="img-fluid">
                             </div>
