--- a/src/app/pages/home/index/modal-basic2/modal-basic2.component.scss
+++ b/src/app/pages/home/index/modal-basic2/modal-basic2.component.scss
@@ -1,5 +1,12 @@
-molla-modal-basic2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.expo-video {
+    width: 100%;
+    height: 35vw;
+}
+
+@media screen and (max-width: 576px) {
+    .expo-video {
+        width: 100%;
+        height: 70vw;
+    }
 }
