--- a/src/app/pages/shop/checkout/checkout.component.html
+++ b/src/app/pages/shop/checkout/checkout.component.html
@@ -228,11 +228,11 @@
                                         </tr>
                                         <tr>
                                             <td>Shipping:</td>
-                                            <td>Free shipping</td>
+                                            <td>{{ deliverytext }}</td>
                                         </tr>
                                         <tr class="summary-total">
                                             <td>Total:</td>
-                                            <td><i class="fa-solid fa-indian-rupee-sign"></i>{{finalamount}}</td>
+                                            <td><i class="fa-solid fa-indian-rupee-sign"></i>{{finalamount + priceoncod}}</td>
                                         </tr>
                                         <div class="checkout-discount" style="width: 150%">
                                             <div id="checkout-discount-form">
@@ -260,19 +260,43 @@
                                 </table>
 
                                 <div>
+                                    <h6><i class="fa-solid fa-circle-exclamation"></i> {{ deliverytext }}</h6>
                                     <div class="form-check first_box">
                                         <input class="form-check-input" type="radio" value="RZP" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault1" checked>
                                         <label class="form-check-label" for="flexRadioDefault1">
                                           Online Payment
                                         </label>
                                       </div>
-                                      <!-- <div class="form-check second_box">
+                                      <div class="form-check second_box">
+                                        <input class="form-check-input" type="radio" value="COD" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                          Cash on Delivery
+                                        </label>
+                                      </div>
+                                      <hr style="margin: 0; margin-bottom: 20px; border-color: lightgray; display: none;" />
+                                      <h6 style="display: none;">Fast Delivery With In 48 Hours</h6>
+                                      <div class="form-check second_box" style="display: none;">
+                                        <input class="form-check-input" type="radio" value="fastdelivery" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault3">
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                          Fast Delivery
+                                        </label>
+                                      </div>
+                                </div> 
+
+                                <!-- <div>
+                                    <div class="form-check first_box">
+                                        <input class="form-check-input" type="radio" value="RZP" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault1" checked>
+                                        <label class="form-check-label" for="flexRadioDefault1">
+                                          Online Payment
+                                        </label>
+                                      </div>
+                                      <div class="form-check second_box">
                                         <input class="form-check-input" type="radio" value="COD" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2" checked>
                                         <label class="form-check-label" for="flexRadioDefault2">
                                           Cash on Delivery
                                         </label>
-                                      </div> -->
-                                </div> 
+                                      </div>
+                                </div>  -->
                               
                                   
 
