--- a/src/app/pages/home/trackorder/trackorder.component.html
+++ b/src/app/pages/home/trackorder/trackorder.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mb-5">
     <div class="track-order">
         <h3>Please enter your Order Number <br> track your order status.</h3>
         <form #trackOrder="ngForm" (ngSubmit)="onSubmit(trackOrder.value)">
