--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,7 +6,7 @@
               <div class="col-sm-6 col-lg-3">
                   <div class="widget widget-about">
                       <a routerLink="/">
-                          <img src="https://www.geonix.in/assets/images/geonix-logo.webp" class="footer-logo" alt="Footer Logo" width="105"
+                          <img src="./assets/images/White logo.png" class="footer-logo" alt="Footer Logo" width="105"
                                   height="27">
                       </a>
                       <p>Established in 2012 geonix is an Indian brand dealing in high quality computer hardware and peripherals. As our tag line suggests our products are made to perform and provides value for money to our customers. </p>
