--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -18,3 +18,68 @@
     height: 36px;
     transition: .3s
   }
+
+  .footer {
+    background-image: linear-gradient(270deg,#24a4c5,#38b299 25%,#466bab 65.1%,#4665ac);
+    margin-left: 0px;
+    padding-left: 10px;
+  }
+
+  .footer-middle.border-0, .widget.widget-about p {
+    color: white;
+    font-weight: 500;
+}
+
+.footer .widget-title {
+    color: white;
+}
+
+.footer a:focus, .footer a:hover, .footer-dark.footer-2 .widget-about-title {
+    color: white;
+}
+
+.widget-call {
+    a {
+        color: white;
+    }
+
+    i {
+        color: white;
+    }
+}
+
+p.footer-copyright {
+    color: white;
+}
+
+.social-links a {
+    background-color: white;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-links a i {
+    color: white;
+    font-size: 25px;
+}
+
+.social-links.mt-3 h4 {
+    color: white;
+}
+
+.social-links i.icon-instagram {
+    background-image: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    -webkit-background-clip: text; /* For Safari */
+    -webkit-text-fill-color: transparent; /* For Safari */
+    background-clip: text;
+    color: transparent;
+}
+
+.social-links i.icon-facebook {
+    color: #3b5998 !important;
+}
+
+.social-links i.icon-linkedin {
+    color: #0072b1 !important;
+}
